# VulkanInC

./: .gitignore  Makefile  README.md  compile_shaders  meson.build  shell.nix
common/: common.c  common.h  files.c  files.h  strings.h
lve/: lve_app.c  lve_app.h  lve_device.h  lve_errors.h  lve_pipeline.c  lve_pipeline.h  lve_window.c  lve_window.h
scheme/: guile-graphics.scm
scheme/guile-graphics/: model.scm
shaders/: frag.glsl  vertex.glsl  vertex.spv
src/: app.h  main.c
